--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,80 +1,35 @@
-/* Styling for Webpage elements - opted to do this manually instead of primarily with bootstrap */
+/* Additional Styling to support bootstrap */
 body {
-    display:flex;
-    justify-content: center;
-    align-items: center;
     height: 100vh;
     margin: 0;
     background:rgb(24, 25, 34);
+    background-image: url('/assets/images/nasa-medium.jpg');
 }
 
-#weatherCard {
-    background: #a2ebcad0;
-    color: white;
-    padding: 15em;
-    border-radius: 45px;
-    width: 100%;
-    max-width: 450px;
-    margin: 1em;
-  }
+.pageTitle {
+    font-size: 40px ;
+}
 
-  .citySearch {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
-  
-  .search-bar {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 35px;
-    border-radius: 10px;
-    border: none;
-  }
+.searchLabel {
+    font-size: 22px;
+}
 
-  .searchBtn {
-    font-size: 35px;
-    border-radius:10px;
-    margin: 8px;
-    border: none;
-  }
+.cityNameText {
+    border-radius: 25px;
+}
 
-  .searchBtn:hover {
-    cursor: pointer;
-  }
+.presentDayCard {
+    max-width: 800px;
+}
 
-  .searchBtn:active {
-    background: #aaaaaa;
-    outline: none;
-  }
+.currentCityName {
+    font-size: 28px ;
+}
 
-  .statisticText {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
+.currentCityDate {
+    font-size: 20px
+}
 
-  .city {
-    font-size: 32px;
-  }
-
-  .temperature {
-    font-size: 40px;
-  }
-
-  .tempMin {
-    font-size: 30px;
-  }
-
-  .tempMax {
-    font-size: 30px;
-  }
-
-  .precipitation {
-    font-size: 30px;
-  }
-
-  .humidity {
-    font-size: 30px;
-  }
+.currentCityWeatherStats {
+    font-size: 22px;
+}
