--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,7 +2,7 @@
 body {
     height: 100vh;
     margin: 0;
-    background:rgb(24, 25, 34);
+    background:rgb(36, 37, 49);
     background-image: url('/assets/images/nasa-medium.jpg');
 }
 
@@ -27,7 +27,12 @@ body {
 }
 
 .currentCityDate {
-    font-size: 20px
+    font-size: 20px;
+}
+
+.currentCityTime {
+    font-size: 22px;
+    color: rgb(55, 54, 54);
 }
 
 .currentCityWeatherStats {
@@ -45,4 +50,22 @@ body {
 
 .oldSearchBtn:active {
     background-color: rgb(48, 48, 90);
+}
+
+.weatherIconCurrent {
+    max-height: 75px;
+    max-width: 75px;
+}
+
+.futureForecastCont {
+    color: white;
+}
+
+h6 {
+    color: rgb(14, 52, 53);
+}
+
+.weatherForecastIcon{
+    max-height: 75px;
+    max-width: 75px;
 }
